--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ MOSAIC_DOMAIN_LIST = "mosaic.ratgirlx.com"
 GIF_TRANSCODE_DOMAIN_LIST = "gif.ratgirlx.com"
 API_HOST_LIST = "api.ratgirlx.com,api-canary.ratgirlx.com"
 HOST_URL = "https://ratgirlx.com"
-REDIRECT_URL = "x.com/ratsukare"
+REDIRECT_URL = "ratsukare"
 #REDIRECT_URL_BSKY = "https://bsky.app/profile/fxbsky.app"
-EMBED_URL = "x.com/ratsukare"
+EMBED_URL = "ratsukare"
 #SENTRY_DSN = ""
 #SENTRY_AUTH_TOKEN = ""
 #SENTRY_ORG = ""
