--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "ratsukare"
+name = "ratgirlx"
 account_id = "b83bcc70906919fba432a5b9cb991432"
 main = "./dist/worker.js"
 compatibility_date = "2024-11-14"
